Prevent logout menu link from dropping down on mobile

--- a/app/styles/sass/screen.scss
+++ b/app/styles/sass/screen.scss
@@ -21,6 +21,7 @@ html {
 
   background: $grey10;
   height: 3em;
+  overflow: hidden;
   width: 100%;
   z-index: 100;
 
